<resources>
    <string name="app_name">WikiClicks</string>
    <string name="random_returner">I\'m Feeling Lucky</string>
    <string name="choose_start_page">Choose start page:</string>
    <string name="choose_end_page">Choose end page:\ \ \ </string>
    <string name="start_game">Start Game!</string>
    <string name="steps">Steps: %1$d</string>
    <string name="steps_init">Steps: 0</string>
    <string name="exit">Exit</string>
    <string name="settings">Settings</string>
    <string name="new_game">New Game</string>
    <string name="target">Target: %1$s</string>
    <string name="select_main_menu">This game is a <i>stub</i>. You can help the developers by <i>expanding it</i>.</string>
    <string name="hint">\?</string>
    <string name="select_mode">Select a <i>mode</i> for the game. You can keep track of the time or
        steps taken to reach the destination, or <i>customize</i> the game for something more interesting. </string>
    <string name="show_statistics"> Show your <i>times</i> or <i>steps</i> for won games. </string>
    <string name="select_offline_level"> Download a <i>offline</i> level to play without an internet connection or play a <i>previously downloaded</i>
        offline level. </string>
    <string name="select_challenge_level"> Complete specially chosen <i>challenge</i> levels and sign in to compare
        your results to those of other players. </string>
    <string name="select_bookmarks"> View your previously <i>bookmarked</i> pages. </string>
    <string name="select_endpoints"> Choose a <i>start</i> and <i>end</i> page for your game. </string>
    <string name="select_settings"> Customize your game: choose whether to track <i>steps</i> and <i>time</i>,
        enable additional <i>bans</i> for the game. </string>
    <string name="time_mode">Time mode</string>
    <string name="steps_mode">Steps mode</string>
    <string name="custom_mode">Custom mode</string>
    <string name="statistics">Statistics</string>
    <string name="offline_game">Offline Game</string>
    <string name="show_times">Show times</string>
    <string name="show_steps">Show steps</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="sign_out">Sign out</string>
    <string name="sign_in">Sign in</string>
    <string name="challenges">Challenges</string>
    <string name="level_0">Level 0</string>
    <string name="level_1">Level 1</string>
    <string name="level_2">Level 2</string>
    <string name="level_3">Level 3</string>
    <string name="level_4">Level 4</string>
    <string name="level_5">Level 5</string>
    <string name="level_6">Level 6</string>
    <string name="level_7">Level 7</string>
    <string name="level_8">Level 8</string>
    <string name="level_9">Level 9</string>
    <string name="channel_id">wikiclicks_offline_download</string>
    <string name="channel_name">WikiClicks</string>
    <string name="channel_description">WikiClicks offline download</string>
    <string name="show_time_mode">Time mode:</string>
    <string name="show_steps_mode">Steps mode:</string>
    <string name="placeholder">Game is in progress.</string>
    <string name="medal">🎖</string>
    <string name="arrow">▼</string>
    <string name="trash_symbol">🗑</string>
    <string name="time_format">Time: %s</string>
    <string name="bookmarks_title">Bookmarks:</string>
    <string name="download_success_message">Download finished successfully!</string>
    <string name="download_failed_message">Downloading the level failed. Please try again.</string>
    <string name="download_finished_message">Download of level %1$d complete</string>
    <string name="downloading_level_message">Downloading level %1$d</string>
    <string name="score_submitted_message">Your score was submitted to the leaderboard</string>
    <string name="game_not_downloaded_message">This offline game has not been downloaded.</string>
    <string name="game_already_downloaded_message">This level has already been downloaded.</string>
    <string name="external_storage_error_message">Error: WikiClicks can\'t reach external storage</string>
    <string name="download_in_progress_message">Download is in progress.</string>
    <string name="exit_title_message">Exit</string>
    <string name="exit_question_message">Are you sure you want to exit?</string>
    <string name="yes_message">Yes</string>
    <string name="no_message">No</string>
    <string name="choose_start_message">Please choose starting page.</string>
    <string name="choose_end_message">Please choose end page.</string>
    <string name="ok_message">Ok</string>
    <string name="page_info_message">%1$s info</string>
    <string name="same_start_and_end_message">Please choose differing start and end page.</string>
    <string name="page_too_far_message">This page is too far away from destination and has not been downloaded.</string>
    <string name="sign_in_successful_message">Sign in successful.</string>
    <string name="sign_in_failed_message">Something went wrong. Error code: %1$d</string>
    <string name="load_level_failed_message">Loading the level failed</string>
    <string name="sign_in_required_message">You have to sign in</string>
    <string name="reload_error_message">Reload old page error</string>
    <string name="incorrect_url_message">URL should lead to english wiki page</string>
    <string name="country_url_message">URL should not lead to country</string>
    <string name="year_url_message">URL should not lead to year</string>
    <string name="game_finishing_message">Do you want to finish this game?</string>
    <string name="bookmark_added_message">Bookmark for %1$s added</string>
    <string name="win_message">You win!</string>
    <string name="new_game_question_message">Do you want to start a new game?</string>
    <string name="back_press_banned_message">Back press is banned in this mode</string>

</resources>
