<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SelectModeActivity"
    android:padding="10dp"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:text="@string/app_name"
        android:textColor="@color/colorNoLink"
        android:textSize="35sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/select_mode"
        android:textColor="@color/colorPlainText"
        android:textSize="15sp" />


    <Button
        android:id="@+id/time_mode_button"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"

        android:text="@string/time_mode"
        android:textColor="@color/colorInitial"
        android:textSize="25sp" />

    <Button
        android:id="@+id/steps_mode_button"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"

        android:text="@string/steps_mode"
        android:textColor="@color/colorInitial"
        android:textSize="25sp" />

    <Button
        android:id="@+id/custom_mode_button"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"

        android:text="@string/custom_mode"
        android:textColor="@color/colorInitial"
        android:textSize="25sp" />

</LinearLayout>