<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.MainMenuActivity">
    <Button
        android:id="@+id/level1"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"

        android:text="@string/level_1"
        android:textColor="@color/colorInitial"
        android:textSize="25sp" />
    <Button
        android:id="@+id/level2"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"

        android:text="@string/level_2"
        android:textColor="@color/colorInitial"
        android:textSize="25sp" />
    <Button
        android:id="@+id/level3"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"

        android:text="@string/level_3"
        android:textColor="@color/colorInitial"
        android:textSize="25sp" />

</LinearLayout>