<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.MainMenuActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:orientation="vertical"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.35"
        android:id="@+id/fictionalLinearLayout">

    <Button
        android:id="@+id/start_game_button"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"

        android:background="#eaf3ff"
        android:text="@string/new_game"
        android:textColor="#DE000000"
        android:textSize="25sp" />

    <Button
        android:id="@+id/settings_button"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"

        android:background="#eaf3ff"
        android:text="@string/settings"
        android:textColor="#DE000000"
        android:textSize="25sp" />

    <Button
        android:id="@+id/exit_button"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"

        android:background="#eaf3ff"
        android:text="@string/exit"
        android:textColor="#DE000000"
        android:textSize="25sp" />

</LinearLayout>

    <TextView
        android:id="@+id/app_name_text"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toTopOf="@+id/fictionalLinearLayout"
        android:layout_marginTop="20dp"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/app_name"
        android:textSize="35sp"
        android:textColor="#36c" />

</android.support.constraint.ConstraintLayout>
