<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:fillViewport="false"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".activities.ChallengesActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:text="@string/app_name"
            android:textColor="@color/colorNoLink"
            android:textSize="35sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/select_challenge_level"
            android:textColor="@color/colorPlainText"
            android:textSize="15sp" />

        <com.google.android.gms.common.SignInButton

            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/sign_out_button"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"

            android:text="@string/sign_out"
            android:textColor="@color/colorInitial"
            android:textSize="25sp" />

        <Button
            android:id="@+id/level1"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"

            android:text="@string/level_1"
            android:textColor="@color/colorInitial"
            android:textSize="25sp" />

        <Button
            android:id="@+id/level2"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"

            android:text="@string/level_2"
            android:textColor="@color/colorInitial"
            android:textSize="25sp" />

        <Button
            android:id="@+id/level3"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"

            android:text="@string/level_3"
            android:textColor="@color/colorInitial"
            android:textSize="25sp" />

        <Button
            android:id="@+id/leaderboard_level1_button"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"

            android:text="@string/level_1_leaderboard"
            android:textColor="@color/colorInitial"
            android:textSize="25sp" />

        <Button
            android:id="@+id/leaderboard_level2_button"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"

            android:text="@string/level_2_leaderboard"
            android:textColor="@color/colorInitial"
            android:textSize="25sp" />

        <Button
            android:id="@+id/leaderboard_level3_button"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"

            android:text="Level 3 leaderboard"
            android:textColor="@color/colorInitial"
            android:textSize="25sp" />

    </LinearLayout>
</ScrollView>