<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".activities.GetEndpointsActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:text="@string/app_name"
            android:textColor="@color/colorNoLink"
            android:textSize="35sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/select_endpoints"
            android:textColor="@color/colorPlainText"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:text="@string/choose_start_page"
            android:textColor="@color/colorPlainText"
            android:textSize="25sp"
            app:layout_constraintHorizontal_bias="0.15" />
        <Button
            android:id="@+id/start_hint_button"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/colorInitial"
            android:text="@string/hint"
            android:textSize="15sp"
            android:layout_gravity="right"
            android:layout_weight="0.7"/>

    </LinearLayout>

    <AutoCompleteTextView
        android:id="@+id/choose_start_point"
        android:maxLines="1"
        android:inputType="textNoSuggestions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="20dp"
        android:textColor="@color/colorInitial"
        android:textSize="25sp"
        app:layout_constraintHorizontal_bias="0.4" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:text="@string/choose_end_page"
            android:textColor="@color/colorPlainText"
            android:textSize="25sp"
            app:layout_constraintHorizontal_bias="0.15" />
        <Button
            android:id="@+id/finish_hint_button"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/colorInitial"
            android:text="@string/hint"
            android:textSize="15sp"
            android:layout_gravity="right"
            android:layout_weight="0.7"/>
    </LinearLayout>

    <AutoCompleteTextView
        android:id="@+id/choose_finish_point"
        android:maxLines="1"
        android:inputType="textNoSuggestions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="20dp"
        android:textColor="@color/colorInitial"
        android:textSize="25sp"
        app:layout_constraintHorizontal_bias="0.4" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/random_button"
            style="@style/Widget.AppCompat.ActionButton"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"

            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"

            android:text="@string/random_returner"
            android:textColor="@color/colorInitial"
            android:textSize="15sp" />

        <Button
            android:id="@+id/ok_button"
            style="@style/Widget.AppCompat.ActionButton"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"

            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"

            android:text="@string/start_game"
            android:textColor="@color/colorInitial"
            android:textSize="15sp" />

    </LinearLayout>

</LinearLayout>
